salesforce/main/default/objects/Interaction_Intelligence__c/Interaction_Intelligence__c.object-meta.xml
<CustomObject>
    <description>고객과의 개별 상호작용(Call/Email/Online Meeting/Offline Meeting) 하나에 대한 정규화된 분석 결과를 저장합니다. 원본 컨텐츠는 원본 Activity(Task/Event/EmailMessage)에 그대로 남아있고, 이 오브젝트는 그 해석/요약만 보관합니다.</description>
    <label>Interaction Intelligence</label>
    <nameField>
        <displayFormat>II-{00000000}</displayFormat>
        <label>Interaction Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>