salesforce/main/default/objects/Interaction_Intelligence__c/fields/Customer_Reaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reaction__c</fullName>
    <label>Customer Reaction</label>
    <type>Picklist</type>
    <description>이 상호작용에서 드러난 고객 반응.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Very Negative</fullName>
            </value>
            <value>
                <fullName>Not Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>