salesforce/main/default/objects/Interaction_Intelligence__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interaction Intelligence</relationshipLabel>
    <relationshipName>Interaction_Intelligence</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 상호작용이 속한 Opportunity. Opportunity 단위 리포팅/집계/Agent 조회를 위해 직접 저장합니다.</description>
</CustomField>