salesforce/main/default/objects/Interaction_Intelligence__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>이 개별 상호작용(Call/Email/Online Meeting/Offline Meeting)에 대한 한 줄~여러 줄 요약.</description>
</CustomField>